fix /add-bot endpoint
